set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_executable(Typical_DP_Contest_a a.cc f.cpp g.cpp h.cpp i.cpp)
add_executable(Typical_DP_Contest_b b.cc)
add_executable(Typical_DP_Contest_c c.cc)
add_executable(Typical_DP_Contest_d d.cpp)
add_executable(Typical_DP_Contest_e e.cpp)
add_executable(Typical_DP_Contest_f f.cpp)
add_executable(Typical_DP_Contest_g g.cpp)
add_executable(Typical_DP_Contest_h h.cpp)
add_executable(Typical_DP_Contest_i i.cpp)